--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,16 @@
 ---
+import Heading from "../components/Heading.astro";
 import MainWrapper from "../layouts/MainWrapper.astro";
-
 
 ---
 
 <MainWrapper>
+
+	<Heading tagName="h1" size="h2" classes="serif large" id="top">Neat new page</Heading>
+
+	<!-- <Heading>Second heading</Heading> -->
+
+
 	<img src="https://as.cornell.edu/sites/default/files/styles/4_5/public/2024-04/2024-04-dvj-disident-writers-v2-crop-web.png?h=8f03465d&itok=BZ8sRpr0" alt="a;skldj;alskdfjf;alskdjf" style="float: right;">
 	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit reiciendis aspernatur obcaecati cupiditate, voluptas autem repudiandae ut odio sapiente assumenda dicta quod enim itaque voluptatibus facilis magnam? Harum aliquam nostrum, excepturi praesentium non hic voluptas omnis amet libero facere incidunt ea adipisci quibusdam magnam laboriosam nam, sapiente esse similique. Libero commodi, eligendi amet rerum ducimus exercitationem quod. Quidem amet, quibusdam cupiditate nostrum quaerat dolor quam quasi doloribus consequatur ullam magnam laudantium, nam dolorum ea! Placeat autem cum voluptatem fuga eligendi ullam maiores facilis, illum velit ducimus ipsum tempore accusantium numquam delectus quaerat praesentium distinctio! Doloribus voluptate fuga quibusdam eaque asperiores, quidem perferendis. Libero voluptates nisi provident. Hic facilis sequi officiis odio porro reiciendis, magnam, odit tempora eaque rem illum dolorem enim ab exercitationem fugit delectus id maxime excepturi. Voluptates autem hic eos sit, distinctio dolore nam reiciendis fugiat consequatur facilis velit quibusdam molestias quasi veniam. Unde iste culpa soluta harum ratione vel fugiat error hic rerum officia, eum ipsum voluptatibus eveniet. Voluptatem enim rem et nulla optio quo ratione pariatur consectetur voluptate, in maxime, odio, soluta eos dolore? Numquam quam ad architecto ducimus provident illum nemo molestias, distinctio sint, esse eius totam impedit inventore vel recusandae harum unde sed deleniti.</p>
 	<ul>
